# emu6502

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md
scripts/: build.sh  init.sh  sandbox.sh  test.sh
src/core/: CMakeLists.txt  common.hpp  emu6502.hpp  main.cpp  types.hpp
src/core/common/: common.hpp  types.hpp
src/core/cpu/: cpu.cpp  cpu.hpp  opcodes.hpp  ps.cpp  ps.hpp
src/core/errors/: errors.hpp  invalid_opcode.hpp
src/core/mem/: mem.cpp  mem.hpp
src/sandbox/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  example.cpp  test_cpu.cpp  test_lda.cpp  test_ldx.cpp  test_mem.cpp
